機械学習モデルの概要説明を追加

--- a/Inverse_Analysis.ipynb
+++ b/Inverse_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXMFpHRRPrK+xNlD3xDhId",
+      "authorship_tag": "ABX9TyMQPV8p29whKBDsp0aw4iHl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "1xKNd6TWAPjg"
       },
@@ -106,7 +106,7 @@
         "id": "v1bUXqrUAa4N",
         "outputId": "378fe637-6658-4bb3-d02b-cf8dc5ddd300"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -326,7 +326,7 @@
         "id": "KV6LHx2xBKL9",
         "outputId": "65a521f6-452b-4ad3-d874-b20bc10140e4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -678,7 +678,7 @@
       "metadata": {
         "id": "cUgOLjK9BT7Z"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -694,13 +694,34 @@
       "metadata": {
         "id": "vgBZ4zgdBWEr"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 4. KerasのSequentialモデルで学習"
+        "## 4. KerasのSequentialモデルで学習\n",
+        "### モデルの概要\n",
+        "- 入力層：2ノード(C2, s)\n",
+        "- 中間層：3層, 各層32ノード\n",
+        "- 出力層：1ノード（BandGap1）\n",
+        "\n",
+        "### 活性化関数\n",
+        "- ReLUを採用（勾配消失問題の解消, 処理速度が速い, 多くの場合高い性能を示す）\n",
+        "\n",
+        "### 損失関数\n",
+        "- 回帰問題に適したMSE（平均二乗誤差）を採用\n",
+        "\n",
+        "### 最適化アルゴリズム\n",
+        "- Adamを採用（Kingma氏らが2014年に提案した高い性能を示すことで知られている | 参考：Adam: A Method for Stochastic Optimization）\n",
+        "  - ハイパーパラメータは提案論文の推奨値で決定\n",
+        "    - lr：学習率\n",
+        "    - beta_1：過去の勾配の指数移動平均を計算する際の減衰係数\n",
+        "    - beta_2：過去の勾配の二乗の指数移動平均を計算する際の減衰係数\n",
+        "\n",
+        "### その他ハイパーパラメータ\n",
+        "- 学習回数：150回\n",
+        "- バッチサイズ：64"
       ],
       "metadata": {
         "id": "leyoei8MGcuS"
@@ -740,7 +761,7 @@
         "id": "iq45INpRBZJt",
         "outputId": "419393a3-b009-4fb9-c517-372074bba64d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,7 +808,7 @@
         "id": "QZNixhGOBeWS",
         "outputId": "2b19d3a4-5f78-435d-9bfe-0aa1411e7a8f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,7 +1131,7 @@
         "id": "5P5ujVCbBgcx",
         "outputId": "298cc2a1-1a04-432f-9aee-d12adb92fe59"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1157,7 +1178,7 @@
         "id": "o2HiBBQaBws6",
         "outputId": "b0788031-df55-498b-c919-8e698ef62e64"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1194,7 +1215,7 @@
         "id": "xAB-FFAaByWe",
         "outputId": "c2ad3e02-c0cc-4275-e001-1aba90ce1f43"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1228,7 +1249,7 @@
         "id": "VckoKfw1B8ix",
         "outputId": "aa273efe-5b59-4ff1-ba2d-9458635f424c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1330,7 +1351,7 @@
         "id": "m1acmAUmCEeI",
         "outputId": "05e52ab3-fbe8-453d-c035-df6ade990c43"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1478,7 +1499,7 @@
         "id": "QU66L-x7CaK-",
         "outputId": "48ec2511-ddb1-4792-ed87-3dfafa6a2552"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
