精度評価指標に関するコメントを追加

--- a/Inverse_Analysis.ipynb
+++ b/Inverse_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQPV8p29whKBDsp0aw4iHl",
+      "authorship_tag": "ABX9TyP4domRsQ6ED4qq1N1ISF7F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1149,6 +1149,25 @@
       ],
       "metadata": {
         "id": "DMj9Zu9OGl6D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 精度評価指標\n",
+        "### MAE（Mean Absolute Error | 平均絶対誤差）\n",
+        "- 各データに対して「予測値と正解値の差(=誤差)」の絶対値を計算し、その総和をデータ数で割った値(=平均値)を出力する関数。0に近いほど良い。\n",
+        "\n",
+        "### RMSE（Root Mean Squared Error | 二乗平均平方根誤差）\n",
+        "- 各データに対して「予測値と正解値の差(=誤差)」の二乗値を計算し, その総和をデータ数で割った値(=平均値)の平方根をとって出力する関数。0に近いほど良い。\n",
+        "\n",
+        "### 決定係数（Coefficient of Determination | R^2）\n",
+        "- 出力の実測値と出力の予測値の間の相関係数の2乗を表す。1に近づくをほど良い。\n",
+        "\n",
+        "参考：https://funatsu-lab.github.io/open-course-ware/basic-theory/accuracy-index/"
+      ],
+      "metadata": {
+        "id": "FFPDM6YPJWXD"
       }
     },
     {
