今後の展望を追加

--- a/Inverse_Analysis.ipynb
+++ b/Inverse_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4domRsQ6ED4qq1N1ISF7F",
+      "authorship_tag": "ABX9TyMKGPgD+m2oNn7sg7H3qmSj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -713,7 +713,7 @@
         "- 回帰問題に適したMSE（平均二乗誤差）を採用\n",
         "\n",
         "### 最適化アルゴリズム\n",
-        "- Adamを採用（Kingma氏らが2014年に提案した高い性能を示すことで知られている | 参考：Adam: A Method for Stochastic Optimization）\n",
+        "- Adamを採用（Kingma氏らが2014年に提案した高い性能を示すことで知られている | 参考：[Adam: A Method for Stochastic Optimization](https://www.semanticscholar.org/paper/Adam%3A-A-Method-for-Stochastic-Optimization-Kingma-Ba/a6cb366736791bcccc5c8639de5a8f9636bf87e8)）\n",
         "  - ハイパーパラメータは提案論文の推奨値で決定\n",
         "    - lr：学習率\n",
         "    - beta_1：過去の勾配の指数移動平均を計算する際の減衰係数\n",
@@ -1162,7 +1162,7 @@
         "- 各データに対して「予測値と正解値の差(=誤差)」の二乗値を計算し, その総和をデータ数で割った値(=平均値)の平方根をとって出力する関数。0に近いほど良い。\n",
         "\n",
         "### 決定係数（Coefficient of Determination | R^2）\n",
-        "- 出力の実測値と出力の予測値の間の相関係数の2乗を表す。1に近づくをほど良い。\n",
+        "- 出力の実測値と出力の予測値の間の相関係数を表す。1に近づくをほど良い。\n",
         "\n",
         "参考：https://funatsu-lab.github.io/open-course-ware/basic-theory/accuracy-index/"
       ],
@@ -1531,6 +1531,20 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 今後の展望\n",
+        "- より有意義な逆解析にしていきたいため、複数出力に対する逆解析を実現していきたい。\n",
+        "- そのために複数出力の深層学習モデルを構築し、逆解析で複数の損失関数を定義して、それぞれの損失関数が小さくなるように入力パラメータの更新を行なっていけば良い。\n",
+        "- しかし、多くの場合それぞれの損失関数の最小値が一つの入力パラメータに定まらず、トレードオフな関係になってしまう\n",
+        "- この問題を解決していくために、多目的最適化アルゴリズムを構築する必要がある。\n",
+        "- 今後は「[だれでも分かる多目的最適化問題超入門](https://qiita.com/sp4ghet/items/f3dfbfe24b0a9c4997ee)」の記事を参考に、多目的最適化アルゴリズムを構築して、複数出力に対する逆解析を実装していくつもりだ。\n"
+      ],
+      "metadata": {
+        "id": "ZA0DeJHENc4T"
+      }
     }
   ]
 }
