3. データ分割

--- a/MOPSO.ipynb
+++ b/MOPSO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBpJp149BSC6Tci9lEo3Bb",
+      "authorship_tag": "ABX9TyORfV+fn8H3cvp2RymO955I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -677,10 +677,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. データ分割\n",
+        "学習用データとテスト用データに分割"
+      ],
+      "metadata": {
+        "id": "2ZLhGzO9lRlI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# データの分割\n",
+        "(train, test) = train_test_split(df, test_size=0.2, shuffle=True)"
+      ],
+      "metadata": {
+        "id": "dZJZum2rlbe9"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# x_train, x_testではcsvファイルの1, 2列目を， y_train, y_testでは3, 4列目のデータを活用\n",
+        "x_train = train.iloc[:, [0, 1]]\n",
+        "y_train = train.iloc[:, [2, 3]]\n",
+        "\n",
+        "x_test = test.iloc[:, [0, 1]]\n",
+        "y_test = test.iloc[:, [2, 3]]"
+      ],
+      "metadata": {
+        "id": "8miak9p1kVzV"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8miak9p1kVzV"
+        "id": "NGsJF5uXlqhh"
       },
       "execution_count": null,
       "outputs": []
