今後の展望追記

--- a/Inverse_Analysis.ipynb
+++ b/Inverse_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhx/PiktzU/aKNkFxztDPp",
+      "authorship_tag": "ABX9TyPGo3HTxaFQ7CM+lhqhxdv0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1541,7 +1541,12 @@
         "- そのために複数出力の深層学習モデルを構築し、逆解析で複数の損失関数を定義して、それぞれの損失関数が小さくなるように入力パラメータの更新を行なっていけば良い。\n",
         "- しかし、多くの場合それぞれの損失関数の最小値が一つの入力パラメータに定まらず、トレードオフな関係になってしまう\n",
         "- この問題を解決していくために、多目的最適化アルゴリズムを構築する必要がある。\n",
-        "- 今後は「[だれでも分かる多目的最適化問題超入門](https://qiita.com/sp4ghet/items/f3dfbfe24b0a9c4997ee)」の記事を参考に、多目的最適化アルゴリズムを構築して、複数出力に対する逆解析を実装していくつもりだ。\n"
+        "- 今後は「[だれでも分かる多目的最適化問題超入門](https://qiita.com/sp4ghet/items/f3dfbfe24b0a9c4997ee)」の記事を参考に、多目的最適化アルゴリズムを構築して、複数出力に対する逆解析を実装していくつもりだ。\n",
+        "\n",
+        "\n",
+        "### 2023年10月12日追記\n",
+        "- KerasのFunctional APIで複数出力に対する学習モデルを構築後、多目的粒子群最適化（MOPSO）アルゴリズムを実装し、複数出力に対する逆解析を実現した。\n",
+        "- https://github.com/yuji-sgs/m1-reserch/blob/main/MOPSO.ipynb\n"
       ],
       "metadata": {
         "id": "ZA0DeJHENc4T"
