コメント追加

--- a/MOPSO.ipynb
+++ b/MOPSO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6/zEc6xCaMy8QKZh1nYvw",
+      "authorship_tag": "ABX9TyOXmXel3Pjz/aTR/Wvo1G5h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "u9sDra_qg27E"
       },
@@ -110,7 +110,7 @@
         "id": "bTSO3UCyj_Zt",
         "outputId": "08e1b632-317b-429e-a0db-953bf9fd9dff"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -330,7 +330,7 @@
         "id": "CMaPN4UGkRh2",
         "outputId": "b69e5abd-13d6-4540-d2d9-2e9cd31ed7c6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
       "metadata": {
         "id": "dZJZum2rlbe9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -710,7 +710,7 @@
       "metadata": {
         "id": "8miak9p1kVzV"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -783,7 +783,7 @@
       "metadata": {
         "id": "NGsJF5uXlqhh"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +804,7 @@
         "id": "mdV1zp7hneWG",
         "outputId": "cc6d7021-486f-4e45-f39a-541b07188772"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1427,7 +1427,7 @@
         },
         "outputId": "3d03b1f5-64b9-4907-e5e0-08697bee9e89"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1507,7 +1507,7 @@
         "id": "cqI1fUptytzH",
         "outputId": "47bd8762-fdfc-4123-9e04-936f065dc81a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1578,7 +1578,7 @@
         "id": "G2MIDIcwyuRo",
         "outputId": "9528208f-0dbf-4344-e7a4-3eb4234a2c73"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1641,7 +1641,7 @@
         "id": "hGR9Tpbey5s0",
         "outputId": "cb8c7bf0-a566-4577-80fa-f873e2767f8e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1672,7 +1672,9 @@
         "参考記事\n",
         "- [粒子群最適化法(PSO)を救いたい](https://qiita.com/ganyariya/items/ae5a38a3537b06bd3842)\n",
         "- [最適化アルゴリズムを実装していくぞ（粒子群最適化）](https://qiita.com/pocokhc/items/fa6dfebad1130f21ac25)\n",
-        "- [だれでも分かる多目的最適化問題超入門](https://qiita.com/sp4ghet/items/f3dfbfe24b0a9c4997ee)"
+        "- [だれでも分かる多目的最適化問題超入門](https://qiita.com/sp4ghet/items/f3dfbfe24b0a9c4997ee)\n",
+        "\n",
+        "先にw11_max, BandGap1の所望値yを設定しておいて、それを実現するC2とsを入力パラメータxを探索していく。"
       ],
       "metadata": {
         "id": "SEDqyeAqzXrD"
@@ -1688,7 +1690,7 @@
       "metadata": {
         "id": "DIuOeF_wER7Y"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1779,7 +1781,7 @@
         "id": "eoFQ76e4y9ba",
         "outputId": "160812e2-6d51-4865-df66-b33c94102335"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1826,7 +1828,7 @@
         "id": "tKhQqZOkzhAR",
         "outputId": "58efa7d3-fee3-4a6f-fc09-8aa57d88bc1e"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1894,7 +1896,7 @@
         "id": "ejYj432SzsHw",
         "outputId": "86b8b955-7db0-486a-b674-13fd5e589056"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1925,7 +1927,7 @@
         "id": "8LZxcGkEz7Bo",
         "outputId": "b2176b7b-7061-4d51-dc7a-68a21aa984fb"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
